<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/sort"
        android:contentDescription="@string/content_description_sort"
        android:icon="@drawable/ic_filter"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/most_popular"
                android:title="@string/most_popular" />
            <item
                android:id="@+id/lest_popular"
                android:title="@string/lest_popular" />
        </menu>
    </item>
</menu>